--- a/nekotheme/htdocs/css/coco.css
+++ b/nekotheme/htdocs/css/coco.css
@@ -284,11 +284,11 @@ table.listing thead th {
 }
 #changelog div.change {
   margin: 0 4em 0 0;
+  padding: 0 .3em;
 }
 #changelog div.change.own {
   background-color: #f6f6f6;
   margin: 0 0 0 4em;
-  padding: 0 .3em;
   border-radius: 3px;
 }
 
@@ -297,4 +297,15 @@ table.listing thead th {
   width: auto;
   min-width: 36em;
   max-width: 64em;
+}
+
+/* override TracAccountManager */
+#acctmgr_loginform {
+  margin: 0 auto;
+  padding: 2em;
+  width: fit-content;
+  background: #f6f6f6;
+}
+#acctmgr_loginform #login_options input[type=submit] {
+  width: 100%;
 }
